[delta/#172] Implement AA Tracker look and feel Create new stylesheet for AA Tracker and fix a horizontal scrollbar that was affecting all tenants

--- a/Source/ProjectFirma.Web/Content/Bootstrap/firma/base.theme.less
+++ b/Source/ProjectFirma.Web/Content/Bootstrap/firma/base.theme.less
@@ -69,6 +69,7 @@ body {
     font-size: @firma-text-fontSize;
     background-color: @firma-background-color;
     color: @firma-text-color;
+    overflow-x: hidden;
 }
 
 input[disabled] {
